--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- navbar starts  -->
@@ -388,9 +395,11 @@
           <div class="col-lg-8">
             <div class="join-text text-white">
               <h1>Ready to join?</h1>
-              <p>Join us now to get a special discount. All it takes is to
+              <p>
+                Join us now to get a special discount. All it takes is to
                 register your complimentary Pro Edu account and thousands of
-                free courses will be at your fingertips</p>
+                free courses will be at your fingertips
+              </p>
             </div>
           </div>
           <div class="col-lg-4 d-flex align-items-center justify-content-end">
@@ -399,6 +408,244 @@
         </div>
       </div>
     </section>
+
+    <!-- students  -->
+
+    <section id="students">
+      <div class="container">
+        <div class="row">
+          <h1 class="text-capitalize">Meet our successful students</h1>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+          <div class="col-lg-3">
+            <div class="student border">
+              <img src="./images/student/student-1.png" alt="" />
+              <div class="student-text">
+                <h1>Farhat Mahi</h1>
+                <small>Full-Stack Web Developer</small>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="student border">
+              <img src="./images/student/student-3.png" alt="" />
+              <div class="student-text">
+                <h1>Farhat Mahi</h1>
+                <small>Full-Stack Web Developer</small>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="student border">
+              <img src="./images/student/student-1.png" alt="" />
+              <div class="student-text">
+                <h1>Farhat Mahi</h1>
+                <small>Full-Stack Web Developer</small>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="student border">
+              <img src="./images/student/student-3.png" alt="" />
+              <div class="student-text">
+                <h1>Farhat Mahi</h1>
+                <small>Full-Stack Web Developer</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center mt-5">
+            <button class="btn btn-primary">See More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="faq">
+      <div class="container d-flex justify-content-center">
+        <div class="col-lg-8">
+          <h1 class="text-capitalize text-center">
+            frequently asked questions
+          </h1>
+          <p class="text-center">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+          <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseOne"
+                  aria-expanded="true"
+                  aria-controls="panelsStayOpen-collapseOne"
+                >
+                  Do you keep your courses forever?
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="panelsStayOpen-headingOne"
+              >
+                <div class="accordion-body">
+                  Once you purchase a course, you'll have access for life,
+                  provided that your account is in good standing and Udemy
+                  continues to have a license to that course.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseTwo"
+                >
+                  Is Pro Edu a one time payment?
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="panelsStayOpen-headingTwo"
+              >
+                <div class="accordion-body">
+                  You pay a one-time fee for any course and, unlike Pluralsight
+                  or Lynda LinkedIn Learning that charge a monthly subscription,
+                  your Pro Edu course will be yours forever.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseThree"
+                >
+                  Can multiple people use Udemy at the same time?
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="panelsStayOpen-headingThree"
+              >
+                <div class="accordion-body">
+                  You may not share your account login credentials with anyone
+                  else. You are responsible for what happens with your account
+                  and Udemy will not intervene in disputes between students or
+                  instructors who have shared account login credentials.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseThree"
+                >
+                  Can Pro Edu courses get you a job?
+                </button>
+              </h2>
+              <div
+                id="panelsStayOpen-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="panelsStayOpen-headingThree"
+              >
+                <div class="accordion-body">
+                  Yes, you can get a job with a Pro Edu certificate. This is
+                  especially true if you are a student who is willing to put in
+                  the effort. Udemy certificates can help you gain relevant
+                  skills and knowledge that will help you in your job search,
+                  but they are not sufficient to obtain high-paying jobs.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div id="trusted">
+      <div class="container">
+        <div class="row">
+          <h1 class="text-capitalize text-center mb-5">
+            Trusted by over 800+ companies
+          </h1>
+          <div class="col-lg-2">
+            <div class="company-img">
+              <img src="./images/company/company-1.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="company-img">
+              <img src="./images/company/company-2.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="company-img">
+              <img src="./images/company/company-3.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="company-img">
+              <img src="./images/company/company-4.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="company-img">
+              <img src="./images/company/company-5.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="company-img">
+              <img src="./images/company/company-6.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="footer" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-white text-center">
+            <h1>Pro Edu</h1>
+            <p>
+              Office 41, Zawaya Buildin, Ghala Muscat<br />Sultanate of Oman
+            </p>
+            <a href="#" class="text-decoration-none text-white">Term of Use </a>
+
+            <a href="#" class="text-decoration-none text-white"
+              >Privacy Policy</a
+            >
+            <div class="social-icons mt-3 d-flex justify-content-center">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-solid fa-at"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
