--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </div>
             </div>
             <button
-              class="carousel-control-prev d-none d-md-block"
+              class="carousel-control-prev d-md-block"
               type="button"
               data-bs-target="#carouselExampleCaptions"
               data-bs-slide="prev"
@@ -152,7 +152,7 @@
               <span class="visually-hidden">Previous</span>
             </button>
             <button
-              class="carousel-control-next d-none d-md-block"
+              class="carousel-control-next d-md-block"
               type="button"
               data-bs-target="#carouselExampleCaptions"
               data-bs-slide="next"
@@ -173,7 +173,7 @@
     <section id="courses">
       <div class="container">
         
-          <h1 class="text-center">Discover Our Popular Courses</h1>
+          <h1 class="text-center font-weight-bold">Discover Our Popular Courses</h1>
           <p class="text-center mb-5">
             Choose from 185,000 online video courses with new additions
             published every month
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-1.png"
-                    class="img-fluid rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -365,18 +365,18 @@
                 register your complimentary Pro Edu account and thousands of
                 free courses will be at your fingertips.
               </p>
-              <div class="count d-flex justify-content-between mt-3 mb-4">
+              <div class="count d-flex justify-content-between flex-wrap mt-3 mb-4">
                 <div class="count-box">
-                  <h1>3.2K+</h1>
+                  <h1 class="font-weight-bold">3.2K+</h1>
                   <small class="text-muted">Online course</small>
                 </div>
                 <div class="count-box">
-                  <h1>3.2K+</h1>
-                  <small class="text-muted">Online course</small>
+                  <h1 class="font-weight-bold">1K+</h1>
+                  <small class="text-muted">Ratings and reviews</small>
                 </div>
                 <div class="count-box">
-                  <h1>3.2K+</h1>
-                  <small class="text-muted">Online course</small>
+                  <h1 class="font-weight-bold">600+</h1>
+                  <small class="text-muted">Expert members</small>
                 </div>
               </div>
               <a href="#" class="btn btn-primary">Read More</a>
@@ -413,14 +413,14 @@
     <section id="students">
       <div class="container">
         <div class="row">
-          <h1 class="text-capitalize">Meet our successful students</h1>
-          <p>
+          <h1 class="text-capitalize text-lg-left text-center">Meet our successful students</h1>
+          <p class="text-lg-left text-center">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
           <div class="col-lg-3">
-            <div class="student border">
-              <img src="./images/student/student-1.png" alt="" />
+            <div class="student border rounded mb-lg-0 mb-3">
+              <img src="./images/student/student-1.png" class="rounded-top rounded-right" alt="" />
               <div class="student-text">
                 <h1>Farhat Mahi</h1>
                 <small>Full-Stack Web Developer</small>
@@ -428,7 +428,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="student border">
+            <div class="student border rounded mb-lg-0 mb-3">
               <img src="./images/student/student-3.png" alt="" />
               <div class="student-text">
                 <h1>Farhat Mahi</h1>
@@ -437,7 +437,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="student border">
+            <div class="student border rounded mb-lg-0 mb-3">
               <img src="./images/student/student-1.png" alt="" />
               <div class="student-text">
                 <h1>Farhat Mahi</h1>
@@ -446,7 +446,7 @@
             </div>
           </div>
           <div class="col-lg-3">
-            <div class="student border">
+            <div class="student border rounded">
               <img src="./images/student/student-3.png" alt="" />
               <div class="student-text">
                 <h1>Farhat Mahi</h1>
