--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-1.png"
-                    class="img-fluid w-100 rounded-start"
+                    class="img-fluid w-100 w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -211,7 +211,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-3.png"
-                    class="img-fluid rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -234,7 +234,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-5.png"
-                    class="img-fluid rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -261,7 +261,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-2.png"
-                    class="img-fluid rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -284,7 +284,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-4.png"
-                    class="img-fluid rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -307,7 +307,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-6.png"
-                    class="img-fluid rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -388,21 +388,21 @@
 
     <!-- Join now starts  -->
 
-    <section id="join">
-      <div class="container">
+    <section id="join" class="mt-5 mx-4">
+      <div class="container rounded">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-lg-8 col-12">
             <div class="join-text text-white">
               <h1>Ready to join?</h1>
-              <p>
+              <p class="text-white">
                 Join us now to get a special discount. All it takes is to
                 register your complimentary Pro Edu account and thousands of
                 free courses will be at your fingertips
               </p>
             </div>
           </div>
-          <div class="col-lg-4 d-flex align-items-center justify-content-end">
-            <a href="#" class="btn btn-light">Join us now</a>
+          <div class="col-lg-4 col-12 d-flex align-items-center justify-content-md-end justify-content-center">
+            <a href="#" class="btn btn-light join-btn">Join us now</a>
           </div>
         </div>
       </div>
@@ -630,7 +630,7 @@
             <p>
               Office 41, Zawaya Buildin, Ghala Muscat<br />Sultanate of Oman
             </p>
-            <a href="#" class="text-decoration-none text-white">Term of Use </a>
+            <a href="#" class="text-decoration-none text-white">Term of Use |</a>
 
             <a href="#" class="text-decoration-none text-white"
               >Privacy Policy</a
