--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                   <img
                     src="./images/course/course-1.png"
-                    class="img-fluid w-100 w-100 rounded-start"
+                    class="img-fluid w-100 rounded-start"
                     alt="..."
                   />
                 </div>
@@ -337,14 +337,14 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
-            <div class="about-image">
+          <div class="col-lg-6 col-md-6 px-0">
+            <div class="about-image d-flex justify-content-start">
               <img src="./images/working.png" alt="" />
             </div>
           </div>
 
           <div
-            class="col-lg-6 d-flex flex-column justify-content-center align-items-center"
+            class="col-lg-6 col-md-6 d-flex flex-column justify-content-center align-items-center"
           >
             <div class="about-text ps-lg-5 pe-lg-5">
               <h1 class="mb-4">Explore the E-learning Institute</h1>
@@ -356,14 +356,7 @@
                 achievable learning outcomes. Our online courses strive to
                 provide interactive and rich studying experiences - for anyone
                 in the world, wherever they are.
-                <br /><br />
-                Since 2007, we have partnered with universities, foundations and
-                individuals across the globe to bring you courses that are free,
-                flexible and fun. You can opt for a longer diploma version or
-                choose to do a series of shorter certificate courses, each
-                designed to fit in with your schedule. All it takes is to
-                register your complimentary Pro Edu account and thousands of
-                free courses will be at your fingertips.
+                
               </p>
               <div class="count d-flex justify-content-between flex-wrap mt-3 mb-4">
                 <div class="count-box">
@@ -401,7 +394,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4 col-12 d-flex align-items-center justify-content-md-end justify-content-center">
+          <div class="col-lg-4 col-12 d-flex align-items-center justify-content-md-center justify-content-lg-end justify-content-center">
             <a href="#" class="btn btn-light join-btn">Join us now</a>
           </div>
         </div>
@@ -418,7 +411,7 @@
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="student border rounded mb-lg-0 mb-3">
               <img src="./images/student/student-1.png" class="rounded-top rounded-right" alt="" />
               <div class="student-text">
@@ -427,7 +420,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="student border rounded mb-lg-0 mb-3">
               <img src="./images/student/student-3.png" alt="" />
               <div class="student-text">
@@ -436,7 +429,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="student border rounded mb-lg-0 mb-3">
               <img src="./images/student/student-1.png" alt="" />
               <div class="student-text">
@@ -445,7 +438,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6">
             <div class="student border rounded">
               <img src="./images/student/student-3.png" alt="" />
               <div class="student-text">
