--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   alt="..."
                 />
                 <div class="carousel-caption d-md-block">
-                  <h1>Learning can take you places</h1>
+                  <h1>Never Stop Learning</h1>
                   <p>
                     It is a long established fact that a reader will be
                     distracted by the readable content of a page when looking at
@@ -108,7 +108,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="./images/cover/cover-2.jpg"
+                  src="./images/cover/cover-2.png"
                   class="d-block w-100"
                   alt="..."
                 />
