button color fixed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <button class="btn btn-outline-primary" type="submit">
+              <button class="btn btn-clr btn-outline-primary" type="submit">
                 Register
               </button>
             </form>
@@ -103,7 +103,7 @@
                     distracted by the readable content of a page when looking at
                     its layout.
                   </p>
-                  <a href="#" class="btn btn-primary">Get Started!</a>
+                  <a href="#" class="btn btn-clr btn btn-clr-primary">Get Started!</a>
                 </div>
               </div>
               <div class="carousel-item">
@@ -119,7 +119,7 @@
                     distracted by the readable content of a page when looking at
                     its layout.
                   </p>
-                  <a href="#" class="btn btn-primary">Get Started!</a>
+                  <a href="#" class="btn btn-clr btn btn-clr-primary">Get Started!</a>
                 </div>
               </div>
               <div class="carousel-item">
@@ -135,7 +135,7 @@
                     distracted by the readable content of a page when looking at
                     its layout.
                   </p>
-                  <a href="#" class="btn btn-primary">Get Started!</a>
+                  <a href="#" class="btn btn-clr btn btn-clr-primary">Get Started!</a>
                 </div>
               </div>
             </div>
@@ -330,7 +330,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="#" class="btn btn-primary text-capitalize">See more courses</a>
+        <a href="#" class="btn btn-clr btn btn-clr-primary text-capitalize">See more courses</a>
       </div>
     </section>
 
@@ -372,7 +372,7 @@
                   <small class="text-muted">Expert members</small>
                 </div>
               </div>
-              <a href="#" class="btn btn-primary">Read More</a>
+              <a href="#" class="btn btn-clr btn btn-clr-primary">Read More</a>
             </div>
           </div>
         </div>
@@ -395,7 +395,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-12 d-flex align-items-center justify-content-md-center justify-content-lg-end justify-content-center">
-            <a href="#" class="btn btn-light join-btn">Join us now</a>
+            <a href="#" class="btn btn-light join-btn ">Join us now</a>
           </div>
         </div>
       </div>
@@ -450,7 +450,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center mt-5">
-            <button class="btn btn-primary">See More</button>
+            <button class="btn btn-clr btn btn-clr-primary">See More</button>
           </div>
         </div>
       </div>
